:fire: :sparkles: Remove google font support, Add smooth scrolling

--- a/src/popup.html
+++ b/src/popup.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="popup.css">
     <title>emojis-table : Get the right emojis from your browser in any tab!</title>
     <script src="popup.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
+    <script src="smoothscroll.js"></script>
 </head>
 <body>
 <div id="badge"></div>
