:ambulance: Fix badge structure

--- a/src/popup.html
+++ b/src/popup.html
@@ -11,11 +11,12 @@
     <script src="smoothscroll.js"></script>
 </head>
 <body>
-<div id="badge"></div>
 <div class="input">
     <input type="text" autofocus="autofocus" autocomplete="off" spellcheck="false"/>
 </div>
-
+<div id="badge">
+    Copied! 🎉
+</div>
 <div class="container">
     <div class="emojis list"></div>
     <div class="emojis results hidden"></div>
